init-branch-menus

--- a/src/content/docs/en/pages/1.build/develop-with-azion/5-develop/developer-tools/Azion IDE/code-editor.mdx
+++ b/src/content/docs/en/pages/1.build/develop-with-azion/5-develop/developer-tools/Azion IDE/code-editor.mdx
@@ -9,7 +9,7 @@ menu_namespace: buildMenu
 
 import Button from '~/components/Button.astro'
 
-<Button href="/en/documentation/products/edge-application/edge-functions/runtime-api/code-editor/" text="go to azion code editor reference" variant="secondary"></Button>
+<Button href="/en/documentation/products/edge-application/edge-functions/runtime-api/code-editor/" text="go to azion code editor reference" variant="secondary" target="_blank"></Button>
 
 Azion code editor for Edge Functions is user-friendly and is built on the Monaco code editor, known from VS Code, making it easy for those familiar with VS Code to adapt. 
 
