review-azion-foundations

--- a/src/content/docs/en/pages/0. main-menu/before-begin/azion-foundations/how-use-azion.mdx
+++ b/src/content/docs/en/pages/0. main-menu/before-begin/azion-foundations/how-use-azion.mdx
@@ -1,9 +1,9 @@
 ---
-title: How to start using Azion
+title: Explore Azion
 description: Discover a few of the ways to learn about Azion Edge Platform.
 meta_tags: edge computing, serverless, Azion Edge Network
-namespace: docs_azion_foundations_start_using_azion
-permalink: /documentation/products/azion-foundations/how-to-start-using-azion/
+namespace: docs_azion_foundations_explore_azion
+permalink: /documentation/products/azion-foundations/explore-azion/
 ---
 import Button from '~/components/Button.astro';
 
