review-edge-foundations

--- a/src/content/docs/en/pages/0. main-menu/before-begin/edge-foundations/edge-native.mdx
+++ b/src/content/docs/en/pages/0. main-menu/before-begin/edge-foundations/edge-native.mdx
@@ -1,11 +1,10 @@
 ---
 title: Characteristics of an edge-native platform
-description: ...
+description: An edge-native platform is designed to operate efficiently at the edge and should possess several key characteristics to meet the challenges and requirements of edge computing.
 meta_tags: edge computing, serverless, Azion Edge Network
 namespace: documentation_edge_foundations_edge_native_platforms
 permalink: /documentation/products/edge-foundations/edge-native-platforms/
 ---
-
 import Button from '~/components/Button.astro';
 
 An **edge-native platform** is designed to operate efficiently at the edge of a network. For this reason, the platform should possess several key characteristics and functionalities to meet the unique challenges and requirements of edge computing.
