--- a/src/content/docs/en/pages/0. main-menu/before-begin/edge-foundations/how-edge-works.mdx
+++ b/src/content/docs/en/pages/0. main-menu/before-begin/edge-foundations/how-edge-works.mdx
@@ -1,6 +1,6 @@
 ---
 title: How edge computing works
-description: ...
+description: Edge computing emerged as a topological architecture where the proximity of computing and processing power is closer to the user.
 meta_tags: edge computing, serverless, Azion Edge Network
 namespace: documentation_edge_foundations_how_edge_computing_works
 permalink: /documentation/products/edge-foundations/how-edge-computing-works/
