--- a/src/content/docs/en/pages/1.build/develop-with-azion/5-develop/framework-specific-guides/vue.mdx
+++ b/src/content/docs/en/pages/1.build/develop-with-azion/5-develop/framework-specific-guides/vue.mdx
@@ -17,7 +17,7 @@ Learn more about [Vue](https://vuejs.org/guide/introduction.html).
 
 Before getting started, you must have:
 
-- An Azion platform account with Edge Functions enabled.
+- An [Azion platform account](/en/documentation/products/accounts/creating-account/) with [Edge Functions](/en/documentation/products/edge-application/edge-functions/) enabled.
 - [The latest version of Azion CLI installed](/en/documentation/products/cli/overview/).
 - Code editor.
 - Access to the terminal.
