--- a/src/content/docs/en/pages/1.build/framework-angular.mdx
+++ b/src/content/docs/en/pages/1.build/framework-angular.mdx
@@ -1,23 +1,20 @@
 ---
-title: How to build with React
-description: Build with React.
-meta_tags: react, js, jamstack
-namespace: docs_framework_hexo
-permalink: /documentation/products/build/develop-with-azion/frameworks-specific/react/
+title: How to build with Angular
+description: Build with Angular.
+meta_tags: angular, js, jamstack
+namespace: docs_framework_angular
+permalink: /documentation/products/build/develop-with-azion/frameworks-specific/angular/
 menu_namespace: buildMenu
 ---
 
-React is a popular JavaScript library primarily used for building dynamic and interactive user interfaces for web applications. However, it can also be utilized for static site generation (SSG) through various frameworks and tools. One such framework is Next.js. Here's an overview of React for static site generation, along with five benefits:
+Angular is an open-source web framework designed with an emphasis on speed and suitability for websites that contain substantial content, such as:
 
-- Improved Performance
-- SEO-Friendly
-- Simplified Hosting
-- Excellent Developer Experience
-- Client-Side Interactivity
+- Landing pages
+- Blogs
+- Technical documentation
+- Similar online platforms
 
-React is listed on [the Jamstack documentation](https://jamstack.org/generators/react-static/) as a static site generator, aligned to the Jamstack approach.
-
-Learn more about [React](https://react.dev/).
+Learn more about [Angular](https://angular.io/docs).
 
 ---
 
@@ -32,9 +29,7 @@ Before getting started, you must have:
 
 ---
 
-## Initializing an React project on the edge
-
-Now, it's time to initialize a React project using the Azion CLI.
+## Initializing an Angular project on the edge
 
 1. Initialize the project:
 
@@ -42,7 +37,7 @@ Now, it's time to initialize a React project using the Azion CLI.
   azion init
 ```
 
-2. Accept the suggested name to your project, or enter the name you choose:
+2. Accept the suggested name for your project, or enter a name:
 
 ```sh 
 (Hit enter to accept the suggested name in parentheses) Your project's name:  (dynamic_caligari)
@@ -54,18 +49,20 @@ Output:
 Getting modes available
 ```
 
-3. Choose the React template: 
+3. Choose the Angular template: 
 
 ```sh 
 Getting modes available? Choose a template for your project: (Use arrow keys)
-  Angular 
+ ❯Angular 
   Astro 
   Hexo 
   Next 
- ❯React 
+  React 
   Vue 
   Vite 
 ```
+
+Now, Angular's CLI will follow the process and initialize your Angular project.
 
 4. After the initialization is complete, choose the mode:
 
@@ -73,11 +70,11 @@ Getting modes available? Choose a template for your project: (Use arrow keys)
 Choose a mode:  [Use arrows to move, type to filter]
   Javascript (Compute)
   Typescript (Compute)
-  Angular (Deliver)
+ ❯Angular (Deliver)
   Astro (Deliver)
   Hexo (Deliver)
   Next (Deliver)
- >React (Deliver)
+  React (Deliver)
 ```
 
 5. With the template fetched and configured, you can now start a local development server.
@@ -108,20 +105,20 @@ Your Edge Application was built successfully
 [Vulcan] [Server] › ✔  success   Function running on port http://localhost:3000/
 ```
 
-2. On the browser, go to `http://localhost:3000/` and you can now see your React project running.
+2. On the browser, go to `http://localhost:3000/` and you can see your Angular project running.
 
 #### Deploying the project
 
 When your project is running locally, you're still able to deploy it to the edge. To do so: 
 
-1. Stop the terminal execution with `control + c`.
+1. Stop the terminal execution with `control + c`. 
 2. Access the project folder:
 
 ```sh
 cd [your-project-name] 
 ```
 
-3. Deploy the project:
+3. Deploy the project: 
 
 ```sh
 azion deploy
@@ -129,13 +126,13 @@ azion deploy
 
 4. Wait while the project is built and deployed to the Azion Edge Platform.
 
-After the deployment is complete, you'll receive a domain to access your React project on the Azion Platform.
+After the deployment is complete, you'll receive a domain to access your Angular project on the Azion's platform.
 
 Wait a few minutes so the propagation takes place, and then access your application using the provided domain, which should be similar to `https://xxxxxxx.map.azionedge.net`.
 
 ### Answering no to local dev
 
-Now, after indicating you don't want to have a local server running, deploy your React project to the edge. 
+After indicating you don't want to have a local server running, deploy the Angular project to the edge. 
 
 1. Enter `y` to the following interaction, indicating you want to deploy the project:
 
@@ -151,6 +148,6 @@ Now, after indicating you don't want to have a local server running, deploy your
 
 3. Wait while the project is built and deployed to the Azion Edge Platform.
 
-After the deployment is complete, you'll receive a domain to access your React project on the Azion's platform.
+After the deployment is complete, you'll receive a domain to access your Angular project on the Azion Platform.
 
 Wait a few minutes so the propagation takes place, and then access your application using the provided domain, which should be similar to `https://xxxxxxx.map.azionedge.net`.
