--- a/src/content/docs/en/pages/1.build/framework-react.mdx
+++ b/src/content/docs/en/pages/1.build/framework-react.mdx
@@ -1,25 +1,23 @@
 ---
-title: How to build with Vite
-description: Build with Vite.
-meta_tags: vite, js, jamstack
-namespace: docs_framework_vite
-permalink: /documentation/products/build/develop-with-azion/frameworks-specific/vite/
+title: How to build with React
+description: Build with React.
+meta_tags: react, js, jamstack
+namespace: docs_framework_react
+permalink: /documentation/products/build/develop-with-azion/frameworks-specific/react/
 menu_namespace: buildMenu
 ---
 
-Vite is a build tool and development server designed to enhance the developer experience when building web applications. It's particularly well-suited for building modern JavaScript applications, including those that use React, Vue.js, and Svelte, among others. Here's an overview of Vite and its key benefits:
+React is a popular JavaScript library primarily used for building dynamic and interactive user interfaces for web applications. However, it can also be utilized for static site generation (SSG) through various frameworks and tools. One such framework is Next.js. Here's an overview of React for static site generation, along with five benefits:
 
-- Blazing Fast Development
-- Optimized for ES Modules
-- Plugin-Based Architecture
-- Support for Multiple Frameworks
-- Efficient Build Process
-- Vue.js Development
-- Hot Module Replacement (HMR)
+- Improved Performance
+- SEO-Friendly
+- Simplified Hosting
+- Excellent Developer Experience
+- Client-Side Interactivity
 
-Vite is listed on [the Jamstack documentation](https://jamstack.org/generators/vite/) as a static site generator, aligned to the Jamstack approach.
+React is listed on [the Jamstack documentation](https://jamstack.org/generators/react-static/) as a static site generator, aligned to the Jamstack approach.
 
-Learn more about [Vite](https://vitejs.dev/).
+Learn more about [React](https://react.dev/).
 
 ---
 
@@ -34,9 +32,9 @@ Before getting started, you must have:
 
 ---
 
-## Initializing an Vite project on the edge
+## Initializing an React project on the edge
 
-Now, it's time to initialize a Vite project using the Azion CLI.
+Now, it's time to initialize a React project using the Azion CLI.
 
 1. Initialize the project:
 
@@ -46,17 +44,17 @@ Now, it's time to initialize a Vite project using the Azion CLI.
 
 2. Accept the suggested name to your project, or enter the name you choose:
 
-```sh
+```sh 
 (Hit enter to accept the suggested name in parentheses) Your project's name:  (dynamic_caligari)
 ```
 
-Output:
+Output: 
 
 ```sh
 Getting modes available
 ```
 
-3. Choose the Vite template:
+3. Choose the React template: 
 
 ```sh 
 Getting modes available? Choose a template for your project: (Use arrow keys)
@@ -64,27 +62,27 @@ Getting modes available? Choose a template for your project: (Use arrow keys)
   Astro 
   Hexo 
   Next 
-  React 
+ ❯React 
   Vue 
- ❯Vite 
+  Vite 
 ```
 
 4. After the initialization is complete, choose the mode:
 
-```sh
+```sh 
 Choose a mode:  [Use arrows to move, type to filter]
   Javascript (Compute)
   Typescript (Compute)
   Angular (Deliver)
   Astro (Deliver)
- >Vite (Deliver)
+  Hexo (Deliver)
   Next (Deliver)
-  React (Deliver)
+ >React (Deliver)
 ```
 
 5. With the template fetched and configured, you can now start a local development server.
 
-```sh
+```sh 
 Do you want to start a local development server? (y/N) 
 ```
 
@@ -97,7 +95,7 @@ The following steps are based on the answer you gave.
 
 1. Install the project dependencies. Input `y` when the interaction prompts:
 
-```sh
+```sh 
   Do you want to install project dependencies? This may be required to start local development server (y/N)
 ```
 
@@ -110,7 +108,7 @@ Your Edge Application was built successfully
 [Vulcan] [Server] › ✔  success   Function running on port http://localhost:3000/
 ```
 
-2. On the browser, go to `http://localhost:3000/` and you can now see your Vite project running.
+2. On the browser, go to `http://localhost:3000/` and you can now see your React project running.
 
 #### Deploying the project
 
@@ -131,13 +129,13 @@ azion deploy
 
 4. Wait while the project is built and deployed to the Azion Edge Platform.
 
-After the deployment is complete, you'll receive a domain to access your Vite project on the Azion's platform.
+After the deployment is complete, you'll receive a domain to access your React project on the Azion Platform.
 
 Wait a few minutes so the propagation takes place, and then access your application using the provided domain, which should be similar to `https://xxxxxxx.map.azionedge.net`.
 
 ### Answering no to local dev
 
-Now, after indicating you don't want to have a local server running, deploy your Vite project to the edge.
+Now, after indicating you don't want to have a local server running, deploy your React project to the edge. 
 
 1. Enter `y` to the following interaction, indicating you want to deploy the project:
 
@@ -153,6 +151,6 @@ Now, after indicating you don't want to have a local server running, deploy your
 
 3. Wait while the project is built and deployed to the Azion Edge Platform.
 
-After the deployment is complete, you'll receive a domain to access your Vite project on the Azion's platform.
+After the deployment is complete, you'll receive a domain to access your React project on the Azion's platform.
 
 Wait a few minutes so the propagation takes place, and then access your application using the provided domain, which should be similar to `https://xxxxxxx.map.azionedge.net`.
