--- a/src/content/docs/en/pages/0. main-menu/work-with-domains/point-domain.mdx
+++ b/src/content/docs/en/pages/0. main-menu/work-with-domains/point-domain.mdx
@@ -1,12 +1,12 @@
 ---
 title: Point domain to Azion
-description: insert later
-meta_tags: domains
+description: Point your domain record to your Azion domain, ensuring a seamless user experience with your edge application.
+meta_tags: domains, custom domain, DNS, CNAME, records
 namespace: docs_guides_point_domain
-permalink: /documentation/products/point-domain-to-azion/
+permalink: /documentation/products/guides/point-domain-to-azion/
 ---
 
-To point your traffic to Azion, you must associate your **Azion domain** to your **custom domain**. To do that, you must configure your DNS provider and associate the address of your custom domain to the `xxxxxxxxxx.map.azionedge.net` address. You can choose to point your domain using Azion [Real-Time Manager (RTM)](http://manager.azion.com) or the [Azion API](link_api).
+To point your traffic to Azion, you must associate your **Azion domain** to your **custom domain**. To do that, you must configure your DNS provider and associate the address of your custom domain to the `xxxxxxxxxx.map.azionedge.net` address. 
 
 :::note
 This process will require you to associate a CNAME record to your domain. See [Migrate your DNS to Azion](link_migrate) for more information on how to associate an ANAME type record.
@@ -89,7 +89,9 @@ curl --location --request PATCH 'https://api.azionapi.net/domains/<domain_id>' \
   | --- | --- |
   | `cnames` | Accepts a list of CNAMEs for the domains as values. For example, `["*.yourdomain.com", "*.yourdomain.org"]`. |
 
-> If your application uses HTTPS, you might want to combine this process with the [association of a digital certificate](link_digital_certificate) to your custom domain.
+:::tip
+If your application uses HTTPS, you might want to combine this process with the [association of a digital certificate](link_digital_certificate) to your custom domain.
+:::
 
 5. You should receive a response with the updated data.
 
@@ -133,3 +135,7 @@ dig +short yourdomain.org @200.0.0.0
 ```
 
 Once the changes have propagated, you'll be able to access your edge application through your custom domain.
+
+:::tip
+Check the [Azion API documentation](link_azionapi) and the [OpenAPI specification](link_openapi) to know more about all features available via API.
+:::
