--- a/src/content/docs/en/pages/0. main-menu/before-begin/edge-foundations/how-edge-works.mdx
+++ b/src/content/docs/en/pages/0. main-menu/before-begin/edge-foundations/how-edge-works.mdx
@@ -55,6 +55,16 @@ Through a serverless approach, developers focus solely on writing code or functi
 
 While with microservices, applications were built as a collection of loosely coupled, independently deployable services. Each service focuses on a specific business capability and can be developed, deployed, and scaled independently.
 
+<iframe
+width="560"
+height="315"
+src="https://www.youtube.com/embed/veQ_-tlzpic?si=S5kHrjQNUGQYPRHe"
+loading="lazy"
+title="From Past to Present: The Evolutionary Journey of Edge Computing"
+frameborder="0"
+allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+allowfullscreen></iframe>
+
 ---
 
 ## How edge computing works
@@ -78,9 +88,15 @@ There are some key principles to understand the edge computing architecture:
 
 To sum up, edge computing allows efficient data processing and analysis at the network edge, enabling real-time insights and actions. By leveraging edge devices, nodes, and servers, organizations can achieve faster response times, reduce latency, and improve performance, making edge computing a vital component in the evolving landscape of computing architectures.
 
-<Button href="Learning page" text="Go to the Learning section" variant="secondary"> 
-
-</Button>
+<iframe
+width="560"
+height="315"
+src="https://www.youtube.com/embed/DWHdCaozp9Q?si=u-LRbU1IIHI42NST"
+loading="lazy"
+title="Exploring Edge Computing: A Comprehensive Guide to Its Components"
+frameborder="0"
+allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+allowfullscreen></iframe>
 
 ## Edge vs. legacy architectures
 
@@ -92,8 +108,20 @@ Edge computing is also frequently compared and related to cloud computing and ot
 
 In general, those architectures excel at providing vast storage and computing resources, ideal for data-intensive tasks, while edge computing shines when low latency, privacy, and immediate local decision-making are key.
 
+<iframe
+width="560"
+height="315"
+src="https://www.youtube.com/embed/d0z1oIPI8WY?si=5SiLfkF5Uizt0uBZ"
+loading="lazy"
+title="Edge Computing, Cloud Computing, and Legacy Architectures: An In-depth Comparison"
+frameborder="0"
+allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+allowfullscreen></iframe>
+
 Overall, cloud computing and edge computing paradigms often serve as integral components of modern computing ecosystems and complement each other, allowing organizations to create hybrid architectures, delivering a more versatile and efficient computing environment for various applications and industries.
 
 <Button href="Learning material" text="Go to the edge and hybrid-cloud workloads case" variant="secondary"> 
 
 </Button>
+
+
