--- a/src/content/docs/en/pages/0. main-menu/work-with-domains/create-certificate.mdx
+++ b/src/content/docs/en/pages/0. main-menu/work-with-domains/create-certificate.mdx
@@ -5,6 +5,7 @@ meta_tags: digital certificate, encryption, TLS, SSL, authentication, security
 namespace: docs_guides_create_digital_certificate
 permalink: /documentation/products/guides/create-a-digital-certificate/
 ---
+import Button from '~/components/Button.astro'
 
 If your application runs on HTTPS, you'll need a **digital certificate**. A TLS digital certificate confirms a website's identity and protects data transfers. It secures financial transactions and any exchange of sensitive information, from login credentials to personal data.
 
