--- a/src/content/docs/en/pages/0. main-menu/work-with-domains/configure-domains.mdx
+++ b/src/content/docs/en/pages/0. main-menu/work-with-domains/configure-domains.mdx
@@ -5,6 +5,7 @@ meta_tags: domain, edge computing, edge network, custom domain
 namespace: docs_guides_configure_domain
 permalink: /documentation/products/guides/configure-a-domain/
 ---
+import Button from '~/components/Button.astro'
 
 With Azion, you can create and run applications directly on the edge. To enable access to your application via a browser and start receiving users and tracking metrics, you'll need a domain. Azion supplies a complimentary Azion domain address, in the format `xxxxxxxxxx.map.azionedge.net`. When users access your application through this Azion domain, their browser seeks out the closest edge node within Azion's network to find the associated edge application.
 
