--- a/src/content/docs/en/pages/0. main-menu/work-with-domains/migrate-ns.mdx
+++ b/src/content/docs/en/pages/0. main-menu/work-with-domains/migrate-ns.mdx
@@ -5,6 +5,7 @@ meta_tags: domains, nameserver, DNS, resolution, ANAME, zones
 namespace: docs_guides_migrate_nameserver
 permalink: /documentation/products/guides/migrate-ns-to-azion/
 ---
+import Button from '~/components/Button.astro'
 
 Azion allows you to host and manage DNS zones and records by redirecting the DNS resolution of your domain provider to Azion's authoritative nameservers (NS) through **Intelligent DNS**.
 
