--- a/src/content/docs/en/pages/0. main-menu/work-with-domains/point-domain.mdx
+++ b/src/content/docs/en/pages/0. main-menu/work-with-domains/point-domain.mdx
@@ -5,6 +5,7 @@ meta_tags: domains, custom domain, DNS, CNAME, records
 namespace: docs_guides_point_domain
 permalink: /documentation/products/guides/point-domain-to-azion/
 ---
+import Button from '~/components/Button.astro'
 
 To point your traffic to Azion, you must associate your **Azion domain** to your **custom domain**. To do that, you must configure your DNS provider and associate the address of your custom domain to the `xxxxxxxxxx.map.azionedge.net` address. 
 
