--- a/src/content/docs/en/pages/0. main-menu/before-begin/azion-foundations/how-azion-works.mdx
+++ b/src/content/docs/en/pages/0. main-menu/before-begin/azion-foundations/how-azion-works.mdx
@@ -97,7 +97,7 @@ Azion takes advantage of its distributed network and decentralized infrastructur
 
 Azion Edge Platform works, on a high-level, this way:
 
-
+![Graphic about how Azion works](public/assets/docs/images/uploads/how-azion-works.png)
 
 1. An end-user or device makes a *HTTP/HTTPS request* for a web service running in [Azion Edge Network](#azion-edge-network).
 2. [Azion Edge Traffic Router](#azion-edge-traffic-router) defines the better path to the request and it's directed to the *closest* edge location.
