--- a/src/content/docs/en/pages/1.build/edit-main-settings/main-settings.mdx
+++ b/src/content/docs/en/pages/1.build/edit-main-settings/main-settings.mdx
@@ -1,13 +1,17 @@
 ---
 title: Configure main settings
-description: insert later
-meta_tags: build
+description: Customize your edge application settings, delivery protocols and modules.
+meta_tags: build, edge application, configuration, settings, delivery, http, https, ports, http3
 namespace: docs_guides_build_configure_main_settings
 permalink: /documentation/products/guides/build/configure-main-settings/
-menu_namespace : buildMenu
+menu_namespace: buildMenu
 ---
 
+import Button from '~/components/Button.astro'
+
 Once you create an edge application with Azion, you have a range of configurations you can modify. This guide will pick up where you left off when you [created an edge application](link_build_with_edge_app) or [used a template](link_templates). In this guide, you'll learn to modify the protocols, delivery ports, and the encryption type that your application uses to interface with your end-users.
+
+<Button href="link_edge_app" variant="secondary" text="Go to Edge Application documentation"></Button>
 
 To modify your application's delivery main settings, you need:
 
@@ -199,3 +203,7 @@ curl -I https://xxxxxxxxxx.map.azionedge.net:8443
 ```
 
 7. Check the supported cipher suite by inspecting the page or [running the DIG command](link_dig_command).
+
+:::tip
+Check the [Azion API documentation](link_azionapi) and the [OpenAPI specification](link_openapi) to know more about what the Azion API can offer.
+:::
