fix-url-manifesto

--- a/src/content/docs/en/pages/0. main-menu/before-begin/azion-foundations/about-azion-platform.mdx
+++ b/src/content/docs/en/pages/0. main-menu/before-begin/azion-foundations/about-azion-platform.mdx
@@ -50,14 +50,14 @@ Azion offers a wide range of benefits, including low latency, a distributed arch
 Currently, the company has customers spread worldwide and from the most diverse sectors, including retail, tech, finance, media, education, and telecom, with expectations of continuing growth and offering new products to attend diverse use cases and more markets.
 
 <iframe
-    src="https://youtu.be/IMxOiJZWNY0?feature=shared"
+    src="https://www.youtube.com/embed/IMxOiJZWNY0?si=ilrKUwGlQ_fO8lU5"
     loading="lazy"
-    width="600"
-    height="400"
+    width="560"
+    height="315"
     title="Azion Manifesto"
     frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-    allowfullscreen></iframe>
+allowfullscreen></iframe>
 
 <Button href="https://www.azion.com/en/about-us/" text="Go to About us page" variant="secondary">
 
