--- a/src/content/docs/en/pages/1.build/edit-cache-settings/cache-settings.mdx
+++ b/src/content/docs/en/pages/1.build/edit-cache-settings/cache-settings.mdx
@@ -181,7 +181,7 @@ curl --location --request PATCH 'https://api.azionapi.net/edge_applications/<edg
 ```bash
 curl --location 'https://api.azionapi.net/edge_applications/<edge_application_id>/device_groups' \
 --header 'Accept: application/json; version=3' \
---header 'Authorization: Token [TOKEN VALUE]' \
+--header 'Authorization: Token [TOKEN VALUE]'
 ```
 
 4. Copy the ID received in the response.
