--- a/src/content/docs/en/pages/1.build/edit-functions-instances/functions-instances.mdx
+++ b/src/content/docs/en/pages/1.build/edit-functions-instances/functions-instances.mdx
@@ -95,7 +95,7 @@ curl --location --request PATCH 'https://api.azionapi.net/edge_applications/<edg
 ```bash
 curl --location 'https://api.azionapi.net/edge_functions' \
 --header 'Accept: application/json; version=3' \
---header 'Authorization: Token [TOKEN VALUE]' \
+--header 'Authorization: Token [TOKEN VALUE]'
 ```
 
 4. You'll receive a response similar to this:
