--- a/src/content/docs/en/pages/1.build/edit-main-settings/main-settings.mdx
+++ b/src/content/docs/en/pages/1.build/edit-main-settings/main-settings.mdx
@@ -123,7 +123,7 @@ With your token in hand, follow the steps to create an Azion domain via API:
 ```bash
 curl --location 'https://api.azionapi.net/edge_applications \
 --header 'Accept: application/json; version=3' \
---header 'Authorization: Token [TOKEN VALUE]' \
+--header 'Authorization: Token [TOKEN VALUE]'
 ```
 
 2. You'll receive a response with all your existing edge applications. Copy the value of the `<edge_application_id>` that you want to configure.
