--- a/src/content/docs/en/pages/0. main-menu/before-begin/get-help.mdx
+++ b/src/content/docs/en/pages/0. main-menu/before-begin/get-help.mdx
@@ -12,7 +12,7 @@ Azion has different tools and channels to provide help at any point in your jour
 
 - [Read the Documentation](/en/documentation/): with Azion Docs, you find reference, guides, and journeys related to all Azion products and services.
 
-- [Consult the Glossary](): the Azion Glossary gives you explanations on all essential terms to become familiar with the edge-native platform.
+- [Consult the Glossary](/en/documentation/products/azion-glossary/): the Azion Glossary gives you explanations on all essential terms to become familiar with the [edge-native platform](/en/documentation/products/edge-foundations/edge-native-platforms/).
 
 - [Check the System Status page](https://status.azion.com/): you can keep track of how Azion systems are working and subscribe to email updates.
 
