--- a/src/content/docs/en/pages/1.build/7-troubleshooting/understanding-metrics.mdx
+++ b/src/content/docs/en/pages/1.build/7-troubleshooting/understanding-metrics.mdx
@@ -1,9 +1,9 @@
 ---
-title: Understanding Metrics
+title: Understand metrics
 description: You can continuously monitor your applications through Azion Observe products.
 meta_tags: observe, metrics, applications, build
 namespace: docs_build_understanding_metrics
-permalink: /documentation/products/build/troubleshooting/understanding-metrics/
+permalink: /documentation/products/build/troubleshooting/understand-metrics/
 menu_namespace: buildMenu
 ---
 
@@ -33,4 +33,4 @@ To monitor your edge functions invocations, performance, and accesses:
 
 <Button href="/en/documentation/products/graphql-api-features/#datasets" text="query data" variant="secondary"></Button> <br></br>
 
-<Button href="/en/documentation/products/real-time-events/#edge-functions" text="view raw data" variant="secondary"></Button> 
+<Button href="/en/documentation/products/real-time-events/#edge-functions" text="view raw data" variant="secondary"></Button>
