--- a/src/content/docs/en/homes/home-docs.mdx
+++ b/src/content/docs/en/homes/home-docs.mdx
@@ -3,17 +3,16 @@ type: homepage
 meta_tag_robots_no_index: false
 title: Welcome to Azion Docs
 description: >-
-  Find all the information you need to build and run application anywhere. With Azion Docs, you’ll be able to build, secure, deploy, and observe
-  powerful applications.
+  With Azion Docs, you’ll be able to find all the information you need to build and run modern applications on Azion Edge Computing Platform.
 meta_tags: documentation, azion
 namespace: documentation_home
 product_cards:
   - title: 'Get the best of your edge applications following the documentation:'
     cards:
       - icon: /assets/docs/images/uploads/icon-first-setps.svg
-        title: Getting Started
+        title: Get Started
         description: Initial guide to moving your applications to Azion.
-        link: /en/documentation/products/getting-started/
+        link: /en/documentation/products/get-started/
       - icon: /assets/docs/images/uploads/icon-guides.svg
         title: Guides
         description: Practical documentation on how to use products and API.
