--- a/src/content/docs/en/pages/1.build/dev-overview/dev-overview.mdx
+++ b/src/content/docs/en/pages/1.build/dev-overview/dev-overview.mdx
@@ -54,7 +54,7 @@ The code editor for Edge Functions is a good way to get started developing your 
 - IntelliSense
 - Debugging
 
-[Learn more about the code editor](https://www.azion.com/en/documentation/devtools/sdk/go/)
+[Learn more about the code editor](/en/documentation/products/edge-application/edge-functions/runtime-api/code-editor/)
 
 
 ## API reference - Postman
