--- a/src/content/docs/en/pages/guides/real-time-metrics/use-metrics/index.mdx
+++ b/src/content/docs/en/pages/guides/real-time-metrics/use-metrics/index.mdx
@@ -4,6 +4,7 @@ description: Find out how to use Real-Time Metrics and view your charts on Azion
 meta_tags: real time, edge computing, observe, observability, metrics, data, events, security
 namespace: docs_use_real_time_metrics
 permalink: /documentation/products/guides/use-real-time-metrics/
+menu_namespace: buildMenu
 ---
 
 import Button from '~/components/Button.astro'
