--- a/src/content/docs/en/pages/1.build/framework-overview.mdx
+++ b/src/content/docs/en/pages/1.build/framework-overview.mdx
@@ -29,13 +29,13 @@ The following table brings the frameworks that are adapted to the edge:
 
 | Framework | CLI | RTM |
 | --- | --- | --- |
-| Angular | [How to build with Angular](/en/documentation/products/build/develop-with-azion/frameworks-specific/angular/) | [Angular boilerplate](/en/documentation/products/build/develop-with-azion/frameworks-specific/angular/) |
-| Astro | [How to build with Astro](/en/documentation/products/build/develop-with-azion/frameworks-specific/astro/) | [Astro boilerplate]() |
-| Hexo | [How to build with Hexo](/en/documentation/products/build/develop-with-azion/frameworks-specific/hexo/)| [Hexo boilerplate](https://registry.terraform.io/providers/aziontech/azion/latest/docs/data-sources/intelligent_dns_zones) |
-| Next | [How to build with Next](/en/documentation/products/build/develop-with-azion/frameworks-specific/next/) | [Next boilerplate](https://github.com/aziontech/terraform-provider-azion/blob/main/docs/data-sources/records.md)|
-| React | [How to build with React](/en/documentation/products/build/develop-with-azion/frameworks-specific/react/) | [React boilerplate](https://registry.terraform.io/providers/aziontech/azion/latest/docs/data-sources/intelligent_dns_dnssec)|
-| Vite | [How to build with Vite](/en/documentation/products/build/develop-with-azion/frameworks-specific/vite/)| [Vite boilerplate](https://registry.terraform.io/providers/aziontech/azion/latest/docs/data-sources/intelligent_dns_dnssec)|
-| Vue | [How to build with Vue](/en/documentation/products/build/develop-with-azion/frameworks-specific/vue/) | [Vue boilerplate](https://registry.terraform.io/providers/aziontech/azion/latest/docs/data-sources/edge_application_edge_functions_instance)|
+| Angular | [How to build with Angular](/en/documentation/products/build/develop-with-azion/frameworks-specific/angular/) | [Angular boilerplate](/en/documentation/products/guides/angular-boilerplate/) |
+| Astro | [How to build with Astro](/en/documentation/products/build/develop-with-azion/frameworks-specific/astro/) | [Astro boilerplate WIP]() |
+| Hexo | [How to build with Hexo](/en/documentation/products/build/develop-with-azion/frameworks-specific/hexo/)| [Hexo boilerplate WIP](https://registry.terraform.io/providers/aziontech/azion/latest/docs/data-sources/intelligent_dns_zones) |
+| Next | [How to build with Next](/en/documentation/products/build/develop-with-azion/frameworks-specific/next/) | [Next boilerplate WIP](https://github.com/aziontech/terraform-provider-azion/blob/main/docs/data-sources/records.md)|
+| React | [How to build with React](/en/documentation/products/build/develop-with-azion/frameworks-specific/react/) | [React boilerplate WIP](https://registry.terraform.io/providers/aziontech/azion/latest/docs/data-sources/intelligent_dns_dnssec)|
+| Vite | [How to build with Vite](/en/documentation/products/build/develop-with-azion/frameworks-specific/vite/)| [Vite boilerplate WIP](https://registry.terraform.io/providers/aziontech/azion/latest/docs/data-sources/intelligent_dns_dnssec)|
+| Vue | [How to build with Vue](/en/documentation/products/build/develop-with-azion/frameworks-specific/vue/) | [Vue boilerplate WIP](https://registry.terraform.io/providers/aziontech/azion/latest/docs/data-sources/edge_application_edge_functions_instance)|
 
 
 
