EDU-2449-product-release-stages (#222)
* EDU-2449-product-release-stages

* Products

Co-authored-by: Gabriel França <119522814+gabriel-azion@users.noreply.github.com>
Co-authored-by: Mariana Bellorín Aguilera <89138244+MarianaAguilera@users.noreply.github.com>

---------

Co-authored-by: Gabriel França <119522814+gabriel-azion@users.noreply.github.com>
Co-authored-by: Mariana Bellorín Aguilera <89138244+MarianaAguilera@users.noreply.github.com>

--- a/src/content/docs/pt-br/pages/agreements/tos/26-abril-2023/26-april-2023.mdx
+++ b/src/content/docs/pt-br/pages/agreements/tos/26-abril-2023/26-april-2023.mdx
@@ -2,11 +2,11 @@
 title: Termos de Serviço
 description: Clique aqui e confira informações completas sobre os contratos e termos de
   serviço da Azion e tire suas dúvidas!
-namespace: documentation_agreements_service_terms
-permalink: /documentacao/contratos/tds/
+namespace: documentation_agreements_service_terms_26_april_2023
+permalink: /documentacao/contratos/tds/26-abril-2023/
 ---
 
-*Última atualização realizada em 18 de setembro de 2023.*
+*Última atualização realizada em 26 de abril de 2023.*
 
 As seguintes definições referentes aos produtos e serviços, metodologias de cobrança e demais termos são aplicáveis à contratação e uso dos Produtos e Serviços Azion. Buscamos aprimorar constantemente as nossas soluções e, em decorrência disso, este documento pode sofrer atualizações, devendo sempre ser consultado em sua última versão.
 
@@ -130,19 +130,19 @@ A Azion respeita a convenção ISO/IEC 80000 e, portanto, a conversão dos fator
 
 A liberação de novos Produtos ou funcionalidades pela Azion está sujeita aos seguintes estágios:
 
-**Experimental**: é limitado aos colaboradores da Azion e pode, por convite da Azion, ser estendido a um grupo fechado de Clientes, cuja participação implica confidencialidade por parte do Cliente. É um estágio prévio à liberação em **Preview** com o propósito de testar novos Produtos e funcionalidades que ainda estão em desenvolvimento (não precisam estar completos). Essas funcionalidades ou produtos podem ser instáveis e sofrer mudanças incompatíveis com versões anteriores. Não há SLA durante esta fase, por se tratar de um teste com disponibilidade limitada de recursos. O objetivo da Azion neste estágio é validar a funcionalidade e coletar feedback de um conjunto limitado de Clientes ou colaboradores. Neste estágio o produto ou funcionalidade é geralmente adequado para uso apenas nos ambientes de teste do Cliente, não sendo recomendado para ambiente produtivo. Este estágio tem tempo variável, de acordo com o tempo de desenvolvimento de cada funcionalidade ou Produto.
+**Internal Access:** é limitado aos colaboradores da Azion. É um estágio prévio a liberação, para propósitos de teste.
 
-**Preview**: durante o estágio de Preview, os Produtos ou funcionalidades estão prontos para testes e uso mais amplo pelos Clientes. Este estágio é frequentemente anunciado publicamente pela Azion. Não há SLAs durante Preview, a menos que especificado de outra forma nos termos de uma liberação específica. Este estágio pode durar até 6 meses, de acordo com as características e circunstâncias específicas de cada release. Geralmente o estágio de Preview habilita uso em ambientes de teste e produção, e o Cliente pode ser cobrado pelo uso do Produto.
+**Early Access:** funcionalidades em Early Access são limitadas a um grupo fechado de Clientes. A participação é somente por convite da Azion e implica confidencialidade por parte do Cliente. Essas funcionalidades ou Produtos podem ser instáveis e podem sofrer mudanças incompatíveis com versões anteriores. Não há SLA para Produtos ou funcionalidades em Early Access, por se tratar de um teste com disponibilidade limitada de recursos, antes que as liberações sejam realizadas para uso mais amplo. O objetivo da Azion neste estágio é validar a funcionalidade e coletar feedback de um conjunto limitado de Clientes. Produtos neste estágio não precisam estar completos. Neste estágio o Produto ou funcionalidade é geralmente adequado para uso apenas nos ambientes de teste do Cliente. O estágio de Early Access pode durar alguns meses (1 a 2 meses).
 
-**General Availability**: os Produtos e funcionalidades em General Availability estão abertos a todos os Clientes, cobertos pelos SLAs da Azion quando aplicável, e estão prontos para uso em ambiente de produção, de acordo com estes Termos de Serviço.
+**Beta:** na versão Beta, Produtos ou funcionalidades estão prontos para testes e uso mais amplos pelos Clientes. O estágio Beta é frequentemente anunciado publicamente pela Azion. Não há SLAs para uma versão Beta, a menos que especificado de outra forma nos termos de um programa Beta específico. A fase Beta pode durar cerca de 6 meses. Geralmente o estágio Beta é adequado para uso em ambientes de teste e produção, e o Cliente pode ser cobrado pelo uso do Produto.
 
-**Deprecated**: os Produtos e funcionalidades Deprecated estão programados para serem encerrados e removidos (End-Of-Life, EOL). Todos os clientes devem ser notificados de acordo com as regras do Contrato do Cliente. Não há SLA para Produtos e funcionalidades Deprecated, assim como não há compromisso para correção de Bugs ou evolução das funcionalidades desses Produtos. A Azion poderá encerrar o Produto e remover os dados do Cliente na data de End-Of-Life notificada, cabendo aos Clientes a cópia de seus dados e configurações ou a migração para outro Produto, quando aplicável.
+**General Availability:** os Produtos e funcionalidades em General Availability estão abertos a todos os Clientes, cobertos pelos SLAs da Azion quando aplicável, e estão prontos para uso em ambiente de produção, de acordo com estes Termos de Serviço.
+
+**Deprecated:** os Produtos e funcionalidades Deprecated estão programados para serem encerrados e removidos (End-Of-Life, EOL). Todos os clientes devem ser notificados de acordo com as regras do Contrato do Cliente. Não há SLA para Produtos e funcionalidades Deprecated, assim como não há compromisso para correção de Bugs ou evolução das funcionalidades desses Produtos. A Azion poderá encerrar o Produto e remover os dados do Cliente na data de End-Of-Life notificada, cabendo aos Clientes a cópia de seus dados e configurações ou a migração para outro Produto, quando aplicável.
 
 ---
 
 #### Versões anteriores deste documento:
-
-[Termo de Serviço – 26 de abril de 2023](/pt-br/documentacao/contratos/tds/26-abril-2023/)
 
 [Termo de Serviço – 3 de março de 2023](/pt-br/documentacao/contratos/tds/3-marco-2023/)
 
