EDU-2329-add-serverprotocol-http3 (#223)

--- a/src/content/docs/en/pages/products/data-streaming/data-streaming.mdx
+++ b/src/content/docs/en/pages/products/data-streaming/data-streaming.mdx
@@ -107,7 +107,7 @@ The **Edge Applications** data source provides the data from requests made to yo
 | $sent_http_x_original_image_size | “X-Original-Image-Size” header sent in the origin’s response. Used by IMS to inform original image size. Example: 987390 |
 | $server_addr | IP address of the server that received the request. |
 | $server_port | Remote port of the server that received the request. Example: 443 |
-| $server_protocol | Request protocol. Example: HTTP/1.1 |
+| $server_protocol | Request protocol. Example: `HTTP/1.1`, `HTTP/2.0`, `HTTP/3.0` |
 | $session_id | Identification of the session. |
 | $ssl_cipher | Cipher string used to establish TLS connection. Example: TLS_AES_256_GCM_SHA384 |
 | $ssl_protocol | Protocol for an established TLS connection. Example: TLS v1.2 |
@@ -198,7 +198,7 @@ The following variables are available for this option:
 | $remote_addr | IP address of the origin that generated the request. |
 | $requestPath | Request URI without Query String, Host, and Protocol information. Example: if `request_uri`: /jira/plans/48/scenarios/27?vop=320#plan/backlog, then `requestPath`: /jira/plans/48/scenarios/27 |
 | $requestQuery | URI parameters of the request. Example: `requestQuery: vid=320#plan/backlog` |
-| $server_protocol | Request protocol. Example: HTTP/1.1 |
+| $server_protocol | Request protocol. Example: `HTTP/1.1`, `HTTP/2.0`, `HTTP/3.0` |
 | $time | Request date and time. Example: Oct. 31st, 2022 - 19:30:41 |
 | $truncated_body | This variable has been deprecated. It won't have a value assigned to it, only `-` instead of a value. |
 | $version | The Azion Log version used. Example: v5. |
