--- a/src/content/docs/en/pages/products/real-time-events/real-time-events.mdx
+++ b/src/content/docs/en/pages/products/real-time-events/real-time-events.mdx
@@ -99,7 +99,7 @@ Displays the event records from requests made to your [edge applications](/en/do
 | $sent_http_content_type | `Content-Type` header sent in the origin’s response. Example: `text/html; charset=UTF-8` |
 | $server_addr | IP address of the server that received the request. |
 | $server_port | Remote port of the server that received the request. Example: `443` |
-| $server_protocol | Request protocol. Example: `HTTP/1.1` or `HTTP/2.0` |
+| $server_protocol | Request protocol. Example: `HTTP/1.1`, `HTTP/2.0`, `HTTP/3.0` |
 | $ssl_cipher | Cipher string used to establish TLS connection. Example: `TLS_AES_256_GCM_SHA384` |
 | $ssl_protocol | Protocol for an established TLS connection. Example: `TLS v1.2` |
 | $state | Remote client’s state detected via IP address geolocation. Example: `CA`, `RS` |
@@ -214,7 +214,7 @@ Displays the event records of requests analyzed by WAF to allow you to map the s
 | $geoloc_country_name | Remote client’s country detected via IP address geolocation. Example: `United States`, `Russian Federation` |
 | $host | Host information sent on the request line. Stores: host name from the request line, or host name from the `Host` request header, or the server name matching a request. |
 | $remote_address | IP address of the origin that generated the request. |
-| $server_protocol | The connection established protocol. Usually `HTTP/1.1` or `HTTP/2.0` |
+| $server_protocol | The connection established protocol. Example: `HTTP/1.1`, `HTTP/2.0`, `HTTP/3.0` |
 | $time | Request date and time. Example: `Oct. 31st, 2022 - 19:30:41` |
 | $total_blocked | Informs the total number of requests blocked by WAF. |
 | $total_processed | Informs the total number of requests processed by WAF. |
