--- a/src/content/docs/pt-br/pages/produtos/data-streaming/index.mdx
+++ b/src/content/docs/pt-br/pages/produtos/data-streaming/index.mdx
@@ -106,7 +106,7 @@ O data source **Edge Applications** exibe os dados das requisições feitas para
 | $sent_http_x_original_image_size | Cabeçalho "X-Original-Image-Size" enviado na resposta da origem. Informa o tamanho da imagem original. Exemplo: 987390 |
 | $server_addr | Endereço IP do servidor que recebeu a requisição. |
 | $server_port | Porta remota do servidor que recebeu a requisição. |
-| $server_protocol | Protocolo da requisição. Exemplo: HTTP/1.1. |
+| $server_protocol | Protocolo da requisição. Exemplo: `HTTP/1.1`, `HTTP/2.0`, `HTTP/3.0` |
 | $session_id | Identificação da sessão. |
 | $ssl_cipher | String de cifra utilizada para estabelecimento de conexão TLS. Exemplo: TLS_AES_256_GCM_SHA384 |
 | $ssl_protocol | Protocolo de uma conexão TLS estabelecida. Exemplo: TLS v1.2 |
@@ -197,7 +197,7 @@ As seguintes variáveis estão disponíveis para essa opção:
 | $remote_addr | Endereço IP da origem que gerou a requisição. |
 | $requestPath | URI da requisição sem a informação de Query String, Host e Protocol. Exemplo: se `request_uri`: /jira/plans/48/scenarios/27?vop=320#plan/backlog, então `requestPath`: /jira/plans/48/scenarios/27 |
 | $requestQuery | Parâmetros da URI da requisição. Exemplo: requestQuery: vid=320#plan/backlog |
-| $server_protocol | Protocolo da requisição. Exemplo: HTTP/1.1. |
+| $server_protocol | Protocolo da requisição. Exemplo: `HTTP/1.1`, `HTTP/2.0`, `HTTP/3.0` |
 | $time | Data e hora da requisição. Exemplo: Oct. 31st, 2022 - 19:30:41 |
 | $truncated_body | Essa variável foi descontinuada. Portanto, não terá um valor atribuído à ela, apenas `-` no lugar de um valor. |
 | $version | A versão de Azion Log usada. Exemplo: v5 |
