--- a/src/content/docs/pt-br/pages/produtos/real-time-events/index.mdx
+++ b/src/content/docs/pt-br/pages/produtos/real-time-events/index.mdx
@@ -99,7 +99,7 @@ Exibe os registros de eventos de requisições feitas para suas [edge applicatio
 | $sent_http_content_type | Cabeçalho `Content-Type` enviado na resposta da origem. Exemplo: `text/html; charset=UTF-8` |
 | $server_addr | Endereço IP do servidor que recebeu a requisição. |
 | $server_port | Porta remota do servidor que recebeu a requisição. Exemplo: `443` |
-| $server_protocol | Protocolo da requisição. Exemplo: `HTTP/1.1` ou `HTTP/2.0` |
+| $server_protocol | Protocolo da requisição. Exemplo: `HTTP/1.1`, `HTTP/2.0`, `HTTP/3.0` |
 | $ssl_cipher | String de cifra utilizada para estabelecimento de conexão TLS. Exemplo: `TLS_AES_256_GCM_SHA384` |
 | $ssl_protocol | Protocolo de uma conexão TLS estabelecida. Exemplo: `TLS v1.2` |
 | $state | Estado do cliente detectado pela geolocalização de endereço IP. Exemplo: `CA`, `RS` |
@@ -214,7 +214,7 @@ Exibe os registros de eventos de requisição analisados pelo WAF para permitir 
 | $geoloc_country_name | País do cliente remoto detectado pela geolocalização de endereço IP. Exemplo: `United States`, `Russian Federation` |
 | $host | Informação de host enviada na linha da requisição. Armazena: nome do host da linha da requisição, ou o nome do host do campo do cabeçalho `Host`, ou o nome do servidor correspondente à requisição. |
 | $remote_address | Endereço IP da origem que gerou a requisição. |
-| $server_protocol | O protocolo de conexão estabelecido. Geralmente `HTTP/1.1` ou `HTTP/2.0`. |
+| $server_protocol | O protocolo de conexão estabelecido. `HTTP/1.1`, `HTTP/2.0`, `HTTP/3.0` |
 | $time | Data e hora da requisição. Exemplo: `Oct. 31st, 2022 - 19:30:41` |
 | $total_blocked | Informa o número total de requisições bloqueadas pelo WAF. |
 | $total_processed | Informa o número total de requisições processadas pelo WAF. |
