Updated ID 2 from WAF Allowed Rules (#220)
* Updated ID 2 from WAF Allowed Rules

* Update src/content/docs/en/pages/products/edge-firewall/web-application-firewall/custom-allowed-rule.mdx

* Update src/content/docs/pt-br/pages/produtos/edge-firewall/web-application-firewall/custom-allowed-rule/index.mdx

---------

Co-authored-by: Guilherme M. Petry <109288495+peeetry@users.noreply.github.com>

--- a/src/content/docs/en/pages/products/edge-firewall/web-application-firewall/custom-allowed-rule.mdx
+++ b/src/content/docs/en/pages/products/edge-firewall/web-application-firewall/custom-allowed-rule.mdx
@@ -25,7 +25,7 @@ See the list of all available internal rules below:
 | Rule ID | Description                                                                                                                               |
 |:-------:|:------------------------------------------------------------------------------------------------------------------------------------------|
 | 1       | Weird request, unable to parse                                                                                                            |
-| 2       | Request too big, stored on disk, and not parsed                                                                                            |
+| 2       | Request larger than 128 kilobytes, stored on disk, and not parsed                                                                                            |
 | 10      | Invalid HEX encoding (null bytes)                                                                                                         |
 | 11      | Missing or unknown Content-Type header in a POST (this rule applies only to Request Body match zone)                                      |
 | 12      | Invalid formatted URL                                                                                                                     |
