--- a/src/content/docs/pt-br/pages/produtos/edge-firewall/web-application-firewall/custom-allowed-rule/index.mdx
+++ b/src/content/docs/pt-br/pages/produtos/edge-firewall/web-application-firewall/custom-allowed-rule/index.mdx
@@ -24,7 +24,7 @@ Veja, abaixo, a lista de todas as regras internas disponíveis:
 | ID da Regra | Descrição                                                                                                                             |
 |:-------:|:------------------------------------------------------------------------------------------------------------------------------------------|
 | 1       | Weird request, unable to parse                                                                                                            |
-| 2       | Request too big, stored on disk and not parsed                                                                                            |
+| 2       | Request larger than 128 kilobytes, stored on disk and not parsed                                                                                            |
 | 10      | Invalid HEX encoding (null bytes)                                                                                                         |
 | 11      | Missing or unknown Content-Type header in a POST (this rule applies only to Request Body match zone)                                      |
 | 12      | Invalid formatted URL                                                                                                                     |
