adjust links and blank spaces in code blocks

--- a/src/content/docs/en/pages/cli/azion-cli-alpha/dev-command/dev.mdx
+++ b/src/content/docs/en/pages/cli/azion-cli-alpha/dev-command/dev.mdx
@@ -18,12 +18,12 @@ The dev command adapts the environment for building your edge application and ru
 ### Usage
 
 ```sh
-  azion dev
+azion dev
 ```
 
 ### output 
 
-Once you've initialized the local development server, the application goes throug the `build` process.
+Once you've initialized the local development server, the application goes through the `build` process.
 
 ```sh 
 Building your Edge Application. This process may take a few minutes
